--- a/ajout.html
+++ b/ajout.html
@@ -20,7 +20,7 @@
 
 <form id="formRoul" action=# onSubmit='return ajouterEl(this);'>
     <fieldset>
-        <legend>Création d'une entrée</legend>
+        <legend>Création d'un élément</legend>
         <!-- nom -->
         <label for="nom">Nom : </label>
         <input id="nom" name="nom" type="text" required> <br><br>
@@ -42,7 +42,7 @@
 <hr>
 <form id="formSupp" action=# onSubmit='return supp(this);'>
     <fieldset>
-        <legend>Supression d'une entrée</legend>
+        <legend>Supression d'un élément</legend>
         <!-- Numero -->
         <label for="formSupp">Numéro : </label>
         <input id="suppV" name="suppV" type="number" min="0" step="1" required> <br><br>
