--- a/ajout.html
+++ b/ajout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset=utf-8>
     <link rel="stylesheet" type="text/css" href="css/debase.css">
-    <title>TP08 - Entrainement : Liste de tâches</title>
+    <title>Roulette</title>
     <script src="js/roulette.js"></script>
 </head>
 <body>
