--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
 
-    <a href="ajout.html"><img src="img/wheel.gif"></a>
+    <a href="https://youtu.be/dQw4w9WgXcQ"><img src="img/wheel.gif"></a>
 <body>
 
 </body>
