--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <nav>
             <a href="index.html">Index</a>
             <a href="ajout.html">Ajouter élement</a>
-            <a href="supp.html">Supprimer élement</a>
-            <a href="Roulette.html">Tourner la roue</a>
+            <a href="ajout.html">Supprimer élement</a>
+            <a href="ajout.html">Tourner la roue</a>
         </nav>
     </header>
 
