--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <link rel="stylesheet" type="text/css" href="css/debase.css">
     <meta charset=utf-8>
@@ -9,9 +9,7 @@
     <header>
         <nav>
             <a href="index.html">Index</a>
-            <a href="ajout.html">Ajouter élement</a>
-            <a href="ajout.html">Supprimer élement</a>
-            <a href="ajout.html">Tourner la roue</a>
+            <a href="ajout.html">vers roulette</a>
         </nav>
     </header>
 
